# ignitero-launcher

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  Package.swift  README.ja.md  README.md  biome.json  editor-picker.html  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  settings.html  terminal-picker.html  update-version.js  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  ci.yml  release.yml  test.yml
Resources/: Info.plist
Resources/AppIcon.appiconset/: Contents.json
Sources/IgniteroCore/: Ignitero.swift
Sources/IgniteroCore/App/: AppCoordinator.swift  AppDelegate.swift  CacheBootstrap.swift  GlobalShortcutManager.swift  MenuBarActions.swift  PerformanceMonitor.swift
Sources/IgniteroCore/Data/: CacheDatabase.swift  SelectionHistory.swift  SettingsManager.swift
Sources/IgniteroCore/Models/: AppItem.swift  DirectoryItem.swift  EditorInfo.swift  EditorType.swift  TerminalInfo.swift
Sources/IgniteroCore/Resources/: emoji_keywords_ja.json
Sources/IgniteroCore/Services/: AppScanner.swift  CalculatorEngine.swift  DirectoryScanner.swift  EmojiKeywordSearch.swift  HapticService.swift  IMEController.swift  IconCacheManager.swift  LaunchService.swift  ResourceBundle.swift  SearchService.swift  UpdateChecker.swift
Sources/IgniteroCore/UI/: EditorPickerPanel.swift  EmojiPickerPanel.swift  LauncherPanel.swift  LauncherView.swift  LauncherViewModel.swift  RadialPickerView.swift  SettingsView.swift  SettingsViewModel.swift  TerminalPickerPanel.swift  WindowManager.swift
Sources/IgniteroLauncher/: IgniteroApp.swift
Tests/IgniteroCoreTests/: AppCoordinatorTests.swift  AppDelegateTests.swift  AppScannerTests.swift  CacheBootstrapTests.swift  CacheDatabaseTests.swift  CalculatorEngineTests.swift  DirectoryScannerTests.swift  EditorPickerPanelTests.swift  EmojiKeywordSearchTests.swift  EmojiPickerPanelTests.swift  GlobalShortcutTests.swift  HapticServiceTests.swift  IMEControllerTests.swift  IconCacheManagerTests.swift  LaunchServiceTests.swift  LauncherPanelTests.swift  LauncherViewModelTests.swift  MenuBarActionsTests.swift  ModelTests.swift  PerformanceTests.swift  ProjectSetupTests.swift  RadialPickerViewTests.swift  SearchServiceTests.swift  SelectionHistoryTests.swift  SettingsManagerTests.swift  SettingsViewModelTests.swift  TerminalPickerPanelTests.swift  UpdateCheckerTests.swift  WindowManagerTests.swift
scripts/: update_emoji_keywords.py
src/: App.css  App.tsx  EditorPickerWindow.tsx  Settings.css  SettingsWindow.tsx  TerminalPickerWindow.tsx  calculator.test.ts  calculator.ts  editor-picker-main.tsx  history.test.ts  index.css  settings-main.tsx  terminal-picker-main.tsx  types.test.ts  types.ts  utils.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_scanner.rs  cache.rs  directory_scanner.rs  icon_converter.rs  ime_control.rs  launcher.rs  lib.rs  main.rs  search.rs  settings.rs  system_tray.rs  types.rs  update_checker.rs  window_corners.rs
src-tauri/tests/: app_integration.rs  commands_integration.rs
src/test/: setup.ts
