[package]
name = "ignitero-launcher"
version = "25.12.101"
description = "Ignitero Launcher - A powerful app and directory launcher for macOS"
authors = ["you"]
edition = "2021"

[lib]
name = "ignitero_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fuzzy-matcher = "0.3"
walkdir = "2"
plist = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread"] }
urlencoding = "2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
window-vibrancy = "0.6"

[dev-dependencies]
rstest = "0.23"
mockall = "0.13"
tempfile = "3"
