[package]
name = "ignitero-launcher"
version = "26.1.100"
description = "Ignitero Launcher - A powerful app and directory launcher for macOS"
authors = ["you"]
edition = "2021"

[lib]
name = "ignitero_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fuzzy-matcher = "0.3"
walkdir = "2"
plist = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread"] }
urlencoding = "2"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
window-vibrancy = "0.6"
cocoa = "0.26"
objc = "0.2"

[dev-dependencies]
rstest = "0.23"
mockall = "0.13"
tempfile = "3"

[lints.rust]
# objc 0.2 の msg_send! マクロ内で古い cfg(feature = "cargo-clippy") が使用されているため
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"cargo-clippy\"))"] }
