[package]
name = "ignitero-launcher"
version = "26.1.105"
description = "Ignitero Launcher - A powerful app and directory launcher for macOS"
authors = ["you"]
edition = "2021"

[lib]
name = "ignitero_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
tauri = { version = "2.10.2", features = ["macos-private-api", "protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2.6.0"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-shell = "2.3.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
fuzzy-matcher = "0.3.7"
walkdir = "2.5.0"
plist = "1.8.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
reqwest = { version = "0.13.2", features = ["json", "rustls"], default-features = false }
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
urlencoding = "2.1.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
window-vibrancy = "0.7.1"
cocoa = "0.26.1"
objc = "0.2.7"

[dev-dependencies]
rstest = "0.26.1"
mockall = "0.14.0"
tempfile = "3.25.0"

[lints.rust]
# objc 0.2 の msg_send! マクロ内で古い cfg(feature = "cargo-clippy") が使用されているため
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"cargo-clippy\"))"] }
